--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,32 @@
+@font-face {
+  font-display: swap; 
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 300;
+  src: url('../fonts/poppins-v24-latin-300.woff2') format('woff2');
+}
+@font-face {
+  font-display: swap; 
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/poppins-v24-latin-regular.woff2') format('woff2'); 
+}
+@font-face {
+  font-display: swap; 
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../fonts/poppins-v24-latin-600.woff2') format('woff2'); 
+}
+@font-face {
+  font-display: swap; 
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 900;
+  src: url('../fonts/poppins-v24-latin-900.woff2') format('woff2'); 
+}
+
 :root {
   --color-primary-dark: #31261a;
   --color-primary-light: #faf4ea;
@@ -8,8 +37,17 @@
 }
 
 /* Base */
-.body {
+body {
   color: var(--color-primary-dark);
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+address{
+  font-style: normal;
 }
 
 ul {
@@ -23,6 +61,7 @@ ul {
   color: var(--color-primary-light);
   border-radius: 8px;
   cursor: pointer;
+  font-weight: 600;
 }
 
 .button:hover {
@@ -33,15 +72,20 @@ ul {
 /* Link */
 .link {
   color: var(--color-primary-light);
+  text-decoration: none;
 }
 
 .link:hover {
   color: #465929;
+  font-weight: 600;
 }
 
 /* Hero section */
 .hero-title {
   color: var(--color-primary-light);
+  text-align: center;
+  font-size: 128px;
+  font-weight: 900;
 }
 
 .hero-title .accent {
@@ -53,10 +97,62 @@ ul {
   background-color: var(--color-brand-light);
   color: var(--color-primary-light);
 }
+.advantages-item {
+  font-size: 20px;
+  font-weight: 300;
+}
 .section-title {
-  color: var(--color-primary-dark);
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 1.3;
 }
 
-.section-title .accent{
+.section-title .accent {
   color: var(--color-brand-dark);
+}
+
+/* Traditions section */
+.traditions-text .brand {
+  color: var(--color-brand-light);
+  font-weight: 600;
+}
+
+.traditions-text .uppercase {
+  text-transform: uppercase;
+}
+
+/* Chef section */
+.chef-title {
+  font-size: 40px;
+  font-weight: 600;
+}
+
+/* Formats section */
+.format-title {
+  font-size: 24px;
+  font-weight: 600;
+  color: var(--color-primary-light);
+}
+
+.format-text {
+  font-size: 14px;
+  font-weight: 300;
+  color: var(--color-primary-light);
+}
+
+/* Footert */
+.address-link {
+  font-size: 16px;
+  font-weight: 300;
+  color: var(--color-primary-light);
+}
+
+.address-link:hover {
+  font-size: 16px;
+  font-weight: 300;
+  color: var(--color-brand-light);
+}
+
+.address-copyright{
+  font-size: 14px;
 }
