--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,30 +1,30 @@
 @font-face {
-  font-display: swap; 
+  font-display: swap;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 300;
   src: url('../fonts/poppins-v24-latin-300.woff2') format('woff2');
 }
 @font-face {
-  font-display: swap; 
+  font-display: swap;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/poppins-v24-latin-regular.woff2') format('woff2'); 
+  src: url('../fonts/poppins-v24-latin-regular.woff2') format('woff2');
 }
 @font-face {
-  font-display: swap; 
+  font-display: swap;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 600;
-  src: url('../fonts/poppins-v24-latin-600.woff2') format('woff2'); 
+  src: url('../fonts/poppins-v24-latin-600.woff2') format('woff2');
 }
 @font-face {
-  font-display: swap; 
+  font-display: swap;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 900;
-  src: url('../fonts/poppins-v24-latin-900.woff2') format('woff2'); 
+  src: url('../fonts/poppins-v24-latin-900.woff2') format('woff2');
 }
 
 :root {
@@ -37,6 +37,10 @@
 }
 
 /* Base */
+* {
+  box-sizing: border-box;
+}
+
 body {
   color: var(--color-primary-dark);
   font-family: 'Poppins', sans-serif;
@@ -46,12 +50,41 @@ body {
   line-height: 1.5;
 }
 
-address{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+}
+
+address {
   font-style: normal;
 }
 
 ul {
   list-style-type: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+.section {
+  padding: 48px 0;
+}
+
+.container {
+  width: 100%;
+  max-width: 1288px;
+  margin: 0 auto;
 }
 
 /* Button */
@@ -81,11 +114,16 @@ ul {
 }
 
 /* Hero section */
+.hero-section {
+  padding: 272px 0;
+}
+
 .hero-title {
   color: var(--color-primary-light);
   text-align: center;
   font-size: 128px;
   font-weight: 900;
+  margin-bottom: 0;
 }
 
 .hero-title .accent {
@@ -112,6 +150,14 @@ ul {
 }
 
 /* Traditions section */
+.traditions-section {
+  padding-top: 96px;
+}
+
+.traditions-title {
+  margin-bottom: 42px;
+}
+
 .traditions-text .brand {
   color: var(--color-brand-light);
   font-weight: 600;
@@ -122,12 +168,21 @@ ul {
 }
 
 /* Chef section */
+.chefs-title {
+  margin-bottom: 80px;
+}
+
 .chef-title {
   font-size: 40px;
   font-weight: 600;
+  margin-bottom: 16px;
 }
 
 /* Formats section */
+.formats-title {
+  margin-bottom: 80px;
+}
+
 .format-title {
   font-size: 24px;
   font-weight: 600;
@@ -138,6 +193,11 @@ ul {
   font-size: 14px;
   font-weight: 300;
   color: var(--color-primary-light);
+}
+
+/* Contacts section */
+.contact-title {
+  margin-bottom: 16px;
 }
 
 /* Footert */
@@ -153,6 +213,6 @@ ul {
   color: var(--color-brand-light);
 }
 
-.address-copyright{
+.address-copyright {
   font-size: 14px;
 }
