--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -89,6 +89,7 @@ ul {
 
 /* Button */
 .button {
+  padding: 16px 32px;
   background-color: var(--color-brand-light);
   border: 2px solid var(--color-brand-light);
   color: var(--color-primary-light);
