--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -66,6 +66,8 @@ address {
 
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .visually-hidden {
@@ -114,6 +116,26 @@ ul {
   font-weight: 600;
 }
 
+/* Header */
+.header-container {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.header-menu {
+  display: flex;
+  gap: 64px;
+  flex-grow: 1;
+  justify-content: center;
+}
+
 /* Hero section */
 .hero-section {
   padding: 272px 0;
@@ -132,11 +154,18 @@ ul {
 }
 
 /* Advantages section */
-.advatages-list {
+.advantages-section {
   background-color: var(--color-brand-light);
-  color: var(--color-primary-light);
+  padding: 16px 0;
+}
+
+.advatages-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
 }
 .advantages-item {
+  color: var(--color-primary-light);
   font-size: 20px;
   font-weight: 300;
 }
@@ -155,6 +184,16 @@ ul {
   padding-top: 96px;
 }
 
+.traditions-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+
+.traditions-content {
+  min-width: 710px;
+}
+
 .traditions-title {
   margin-bottom: 42px;
 }
@@ -166,6 +205,10 @@ ul {
 
 .traditions-text .uppercase {
   text-transform: uppercase;
+}
+
+.traditions-text:nth-child(3) {
+  max-width: 340px;
 }
 
 /* Chef section */
@@ -180,6 +223,23 @@ ul {
 }
 
 /* Formats section */
+.formats-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.formats-item{
+  flex-basis: calc((100% - 40px)/3);
+}
+
+.format-card {
+  padding: 24px;
+  border: 1px solid black; /* Remove */
+  border-radius: 16px;
+}
+
 .formats-title {
   margin-bottom: 80px;
 }
