--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -37,7 +37,9 @@
 }
 
 /* Base */
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -59,6 +61,10 @@ h5,
 h6,
 p {
   margin-top: 0;
+}
+
+a {
+  display: inline-block;
 }
 
 address {
@@ -235,9 +241,25 @@ ul {
   content: '';
 }
 
+.chefs-list {
+  display: flex;
+  gap: 40px 30px;
+  flex-wrap: wrap;
+}
+
+.chefs-item {
+  flex-basis: calc((100% - 30px) / 2);
+}
+
+.chef-card {
+  display: flex;
+  gap: 30px;
+}
+
 .chef-photo {
   border-radius: 4px 4px 4px 200px;
-  box-shadow: -16px 16px 0 0 var(--color-primary-light), -16px 16px 0 2px var(--color-secondary-dark);
+  box-shadow: -16px 16px 0 0 var(--color-primary-light),
+    -16px 16px 0 2px var(--color-secondary-dark);
 }
 
 .chef-title {
@@ -246,16 +268,39 @@ ul {
   margin-bottom: 16px;
 }
 
+.chef-text p {
+  margin-bottom: 24px;
+}
+
+.chef-text p:last-child {
+  margin-bottom: 0;
+}
+
 /* Formats section */
+.formats-container {
+  display: flex;
+  gap: 32px;
+  align-items: center;
+}
+
 .formats-list {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
   gap: 20px;
+  flex-grow: 1;
 }
 
 .formats-item {
   flex-basis: calc((100% - 40px) / 3);
+  background-image: url(/images/Horseshoe.jpg);
+}
+
+.formats-item:first-child {
+  background-image: url(/images/Walsrus.jpg);
+}
+
+.formats-item:last-child{
+  background-image: url(/images/Handlebar.jpg);
 }
 
 .format-card {
@@ -288,10 +333,11 @@ ul {
 }
 
 /* Carousel */
-.carousel-button{
+.carousel-button {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
   width: 44px;
   height: 44px;
   pad: 0px;
@@ -301,24 +347,65 @@ ul {
   cursor: pointer;
 }
 
-.carousel-button:hover{
+.carousel-button:hover {
   background-color: var(--color-primary-dark);
 }
 
-.carousel-button:hover .carousel-arrow{
+.carousel-button:hover .carousel-arrow {
   fill: var(--color-primary-light);
 }
 
-.carousel-arrow{
+.carousel-arrow {
   fill: var(--color-primary-dark);
 }
 
 /* Contacts section */
+.contacts-section {
+  padding-bottom: 96px;
+}
+
+.contact-container {
+  display: flex;
+  gap: 32px;
+}
+
+.contact-map {
+  flex-shrink: 0;
+  border: none;
+  border-radius: 16px;
+}
+
 .contact-title {
   margin-bottom: 16px;
 }
 
 /* Footer */
+.footer {
+  padding: 32px 0;
+}
+
+.footer-container {
+  display: flex;
+  gap: 20px;
+}
+
+.footer-nav,
+.footer-address {
+  flex-basis: 50%;
+  display: flex;
+  gap: 20px;
+}
+
+.footer-logo,
+.footer-menu {
+  flex-grow: 1;
+}
+
+.address-list,
+.address-info {
+  flex-grow: 1;
+}
+
 .address-link {
   font-size: 16px;
   font-weight: 300;
@@ -332,16 +419,17 @@ ul {
   color: var(--color-brand-light);
 }
 
-.adress-icon{
+.address-icon {
   fill: var(--color-primary-light);
 }
 
-.adress-icon:hover{
+.address-icon:hover {
   fill: var(--color-brand-light);
 }
 
 .address-copyright {
   font-size: 14px;
+  color: var(--color-secondary-dark);
 }
 
 .footer {
