--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -41,6 +41,8 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -116,14 +118,23 @@ ul {
 .link {
   color: var(--color-primary-light);
   text-decoration: none;
+  transition: color 0.3s;
 }
 
 .link:hover {
   color: var(--color-brand-light);
-  font-weight: 600;
+  /* font-weight: 600; */
 }
 
 /* Header */
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 32px;
+}
+
 .header-container {
   display: flex;
   align-items: center;
@@ -146,7 +157,13 @@ ul {
 /* Hero section */
 .hero-section {
   padding: 272px 0;
-  background-image: url('../images/main-background.jpg');
+  background-image: linear-gradient(
+      102.76deg,
+      rgba(18, 18, 17, 0.78) 2.03%,
+      rgba(18, 18, 17, 0.6) 58.46%,
+      rgba(18, 18, 17, 0) 90.36%
+    ),
+    url('../images/main-background.jpg');
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
@@ -313,6 +330,11 @@ ul {
   );
   border: 1px solid black; /* Remove */
   border-radius: 16px;
+  transition: transform 0.3s;
+}
+
+.format-card:hover {
+  transform: scale(1.1);
 }
 
 .formats-title {
@@ -344,6 +366,10 @@ ul {
   background-color: transparent;
   border: 1px solid var(--color-primary-dark);
   cursor: pointer;
+}
+
+.carousel-button:last-child {
+  transform: rotate(180deg);
 }
 
 .carousel-button:hover {
@@ -470,12 +496,16 @@ ul {
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
+  padding: 20px 0;
+  transition: opacity 0.3s, visibility 0.3s;
 }
 
 .modal {
   position: relative;
-  width: 880px;
-  height: 880px;
+  width: 100%;
+  max-width: 880px;
+  height: 100%;
+  max-height: 880px;
   background-color: var(--color-primary-light);
   border-radius: 32px;
 }
