--- a/SCSS/layout/_advantages-section.scss
+++ b/SCSS/layout/_advantages-section.scss
@@ -1,28 +1,16 @@
 .advantages-section {
   background-color: var(--color-brand-light);
   padding: 16px 0;
-}
 
-.advatages-list {
-  display: flex;
-  justify-content: space-between;
-  gap: 40px;
-}
-.advantages-item {
-  color: var(--color-primary-light);
-  font-size: 20px;
-  font-weight: 300;
-}
-.section-title {
-  font-size: 64px;
-  font-weight: 900;
-  line-height: 1.3;
-}
+  &__list {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+  }
 
-.section-title.centered {
-  text-align: center;
-}
-
-.section-title .accent {
-  color: var(--color-brand-dark);
+  &__item {
+    color: var(--color-primary-light);
+    font-size: 20px;
+    font-weight: 300;
+  }
 }
