--- a/SCSS/layout/_formats-section.scss
+++ b/SCSS/layout/_formats-section.scss
@@ -1,63 +1,22 @@
-.formats-container {
-  display: flex;
-  gap: 32px;
-  align-items: center;
-}
+.formats-section {
+  &__title {
+    position: relative;
+    margin: 0 auto 80px;
+  }
 
-.formats-list {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  flex-grow: 1;
-}
+  &__container {
+    display: flex;
+    gap: 32px;
+    align-items: center;
+  }
 
-.formats-item {
-  flex-basis: calc((100% - 40px) / 3);
-}
-
-.format-card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  height: 444px;
-  padding: 24px;
-  background-image: linear-gradient(
-    180deg,
-    rgba(49, 38, 26, 0) 55.21%,
-    rgba(49, 38, 26, 0.71) 72.92%,
-    var(--color-primary-dark)
-  );
-  border-radius: 16px;
-  transition: transform 0.3s;
-}
-
-.format-card:hover {
-  transform: scale(1.1);
-}
-
-.format-image {
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.formats-title {
-  margin-bottom: 80px;
-}
-
-.format-title {
-  font-size: 24px;
-  font-weight: 600;
-  color: var(--color-primary-light);
-  margin-bottom: 16px;
-}
-
-.format-text {
-  font-size: 14px;
-  font-weight: 300;
-  color: var(--color-primary-light);
+  &__list {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-grow: 1;
+  }
+  &__item {
+    flex-basis: calc((100% - 40px) / 3);
+  }
 }
