--- a/SCSS/layout/_hero-section.scss
+++ b/SCSS/layout/_hero-section.scss
@@ -11,16 +11,12 @@
   background-position: center top;
   background-size: cover;
   /* background-attachment: fixed; */
-}
 
-.hero-title {
+  &__title {
   color: var(--color-primary-light);
   text-align: center;
   font-size: 128px;
   font-weight: 900;
   margin-bottom: 0;
 }
-
-.hero-title .accent {
-  color: var(--color-brand-light);
 }
