--- a/SCSS/layout/_modal.scss
+++ b/SCSS/layout/_modal.scss
@@ -10,6 +10,13 @@
   background-color: rgba(0, 0, 0, 0.5);
   padding: 20px 0;
   transition: opacity 0.3s, visibility 0.3s;
+
+  &.is-hidden {
+    /* display: none; */
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
 }
 
 .modal {
@@ -22,35 +29,52 @@
   background-color: var(--color-primary-light);
   border-radius: 32px;
   overflow-y: auto;
-}
 
-.modal::after {
-  bottom: 0;
-  position: absolute;
-  content: '';
-  width: 180px;
-  height: 240px;
-  right: 0;
-  background-image: url(/images/decor-bread-modal.png);
-}
+  &__title {
+    font-size: 64px;
+    text-align: center;
+    margin-bottom: 8px;
+  }
 
-.backdrop.is-hidden {
-  /* display: none; */
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
+  &__text {
+    font-style: 18px;
+    font-weight: 400;
+    color: var(--color-brand-dark);
+    margin-bottom: 72px;
+    text-align: center;
+  }
 
-.modal-btn-close {
-  position: absolute;
-  top: 40px;
-  left: 810px;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  display: inline-block;
-}
+  &::after {
+    bottom: 0;
+    position: absolute;
+    content: '';
+    width: 180px;
+    height: 240px;
+    right: 0;
+    background-image: url(/images/decor-bread-modal.png);
+  }
 
-.modal-arrow {
-  fill: var(--color-primary-dark);
+  &__btn-close {
+    position: absolute;
+    top: 40px;
+    left: 810px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    display: inline-block;
+  }
+
+  &__arrow {
+    fill: var(--color-primary-dark);
+  }
+
+  &__form-field{
+    margin-bottom: 32px;
+  }
+
+  &__button{
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 24px;
+  }
 }
