--- a/SCSS/layout/_section.scss
+++ b/SCSS/layout/_section.scss
@@ -1,9 +1,13 @@
 .section {
   padding: 48px 0;
-}
 
-.container {
-  width: 100%;
-  max-width: 1288px;
-  margin: 0 auto;
+  &__title {
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 1.3;
+
+    &--centered {
+      text-align: center;
+    }
+  }
 }
