--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-display: swap;
   font-family: "Poppins";
@@ -86,6 +87,61 @@ ul {
   overflow: hidden;
 }
 
+.chef-card {
+  display: flex;
+  gap: 30px;
+}
+.chef-card__photo {
+  border-radius: 4px 4px 4px 200px;
+  box-shadow: -16px 16px 0 0 var(--color-primary-light), -16px 16px 0 2px var(--color-secondary-dark);
+}
+.chef-card__title {
+  font-size: 40px;
+  font-weight: 600;
+  margin-bottom: 16px;
+}
+.chef-card__text p {
+  margin-bottom: 24px;
+}
+.chef-card__text p:last-child {
+  margin-bottom: 0;
+}
+
+.format-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 444px;
+  padding: 24px;
+  background-image: linear-gradient(180deg, rgba(49, 38, 26, 0) 55.21%, rgba(49, 38, 26, 0.71) 72.92%, var(--color-primary-dark));
+  border-radius: 16px;
+  transition: transform 0.3s;
+}
+.format-card:hover {
+  transform: scale(1.1);
+}
+.format-card__image {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.format-card__title {
+  margin-bottom: 80px;
+  font-size: 24px;
+  font-weight: 600;
+  color: var(--color-primary-light);
+  margin-bottom: 16px;
+}
+.format-card__text {
+  font-size: 14px;
+  font-weight: 300;
+  color: var(--color-primary-light);
+}
+
 .button {
   padding: 16px 32px;
   background-color: var(--color-brand-light);
@@ -115,11 +171,51 @@ ul {
 .section {
   padding: 48px 0;
 }
+.section__title {
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 1.3;
+}
+.section__title--centered {
+  text-align: center;
+}
+
+.text-brand {
+  color: var(--color-brand-light);
+}
+
+.text-brand-dark {
+  color: var(--color-brand-dark);
+}
+
+.text-bold {
+  font-weight: 600;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
+}
 
 .container {
   width: 100%;
   max-width: 1288px;
   margin: 0 auto;
+}
+
+.form-terms {
+  margin: 0 auto;
+  max-width: 220px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.5;
+  text-align: center;
+}
+.form-terms__link {
+  color: var(--color-primary-dark);
+  text-underline-offset: 4px;
+}
+.form-terms__link:visited {
+  color: inherit !important;
 }
 
 .header {
@@ -129,20 +225,17 @@ ul {
   width: 100%;
   padding-top: 32px;
 }
-
-.header-container {
+.header__container {
   display: flex;
   align-items: center;
   gap: 40px;
 }
-
-.header-nav {
+.header__nav {
   display: flex;
   align-items: center;
   flex-grow: 1;
 }
-
-.header-menu {
+.header__menu {
   display: flex;
   gap: 64px;
   flex-grow: 1;
@@ -157,8 +250,7 @@ ul {
   background-size: cover;
   /* background-attachment: fixed; */
 }
-
-.hero-title {
+.hero-section__title {
   color: var(--color-primary-light);
   text-align: center;
   font-size: 128px;
@@ -166,195 +258,90 @@ ul {
   margin-bottom: 0;
 }
 
-.hero-title .accent {
-  color: var(--color-brand-light);
-}
-
 .advantages-section {
   background-color: var(--color-brand-light);
   padding: 16px 0;
 }
-
-.advatages-list {
+.advantages-section__list {
   display: flex;
   justify-content: space-between;
   gap: 40px;
 }
-
-.advantages-item {
+.advantages-section__item {
   color: var(--color-primary-light);
   font-size: 20px;
   font-weight: 300;
 }
 
-.section-title {
-  font-size: 64px;
-  font-weight: 900;
-  line-height: 1.3;
-}
-
-.section-title.centered {
-  text-align: center;
-}
-
-.section-title .accent {
-  color: var(--color-brand-dark);
-}
-
 .traditions-section {
   padding-top: 96px;
 }
-
-.traditions-container {
+.traditions-section__container {
   display: flex;
   justify-content: space-between;
   gap: 40px;
 }
-
-.traditions-content {
+.traditions-section__content {
   min-width: 710px;
 }
-
-.traditions-title {
+.traditions-section__title {
   margin-bottom: 42px;
   line-height: 84px;
   font-weight: 900;
 }
-
-.traditions-text {
+.traditions-section__text {
   padding-top: 42px;
 }
-
-.traditions-text .brand {
-  color: var(--color-brand-light);
-  font-weight: 600;
-}
-
-.traditions-text .uppercase {
-  text-transform: uppercase;
-}
-
-.traditions-text:nth-child(3) {
+.traditions-section__text--limited {
   max-width: 340px;
 }
-
-.traditions-section-photo {
+.traditions-section__photo {
   border-radius: 400px 400px 4px 4px;
 }
 
-.chefs-title {
+.chefs-section__title {
   position: relative;
   margin: 0 auto 80px;
 }
-
-.chefs-title::before,
-.chefs-title::after {
+.chefs-section__title::before, .chefs-section__title::after {
   position: absolute;
   bottom: 24px;
   width: 352px;
   border: 2px solid var(--color-secondary-light);
   content: "";
 }
-
-.chefs-title::before {
+.chefs-section__title::before {
   left: 0;
 }
-
-.chefs-title::after {
+.chefs-section__title::after {
   right: 0;
 }
-
-.chefs-list {
+.chefs-section__list {
   display: flex;
   gap: 40px 30px;
   flex-wrap: wrap;
 }
-
-.chefs-item {
+.chefs-section__item {
   flex-basis: calc((100% - 30px) / 2);
 }
 
-.chef-card {
-  display: flex;
-  gap: 30px;
+.formats-section__title {
+  position: relative;
+  margin: 0 auto 80px;
 }
-
-.chef-photo {
-  border-radius: 4px 4px 4px 200px;
-  box-shadow: -16px 16px 0 0 var(--color-primary-light), -16px 16px 0 2px var(--color-secondary-dark);
-}
-
-.chef-title {
-  font-size: 40px;
-  font-weight: 600;
-  margin-bottom: 16px;
-}
-
-.chef-text p {
-  margin-bottom: 24px;
-}
-
-.chef-text p:last-child {
-  margin-bottom: 0;
-}
-
-.formats-container {
+.formats-section__container {
   display: flex;
   gap: 32px;
   align-items: center;
 }
-
-.formats-list {
+.formats-section__list {
   display: flex;
   justify-content: center;
   gap: 20px;
   flex-grow: 1;
 }
-
-.formats-item {
+.formats-section__item {
   flex-basis: calc((100% - 40px) / 3);
-}
-
-.format-card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  height: 444px;
-  padding: 24px;
-  background-image: linear-gradient(180deg, rgba(49, 38, 26, 0) 55.21%, rgba(49, 38, 26, 0.71) 72.92%, var(--color-primary-dark));
-  border-radius: 16px;
-  transition: transform 0.3s;
-}
-
-.format-card:hover {
-  transform: scale(1.1);
-}
-
-.format-image {
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.formats-title {
-  margin-bottom: 80px;
-}
-
-.format-title {
-  font-size: 24px;
-  font-weight: 600;
-  color: var(--color-primary-light);
-  margin-bottom: 16px;
-}
-
-.format-text {
-  font-size: 14px;
-  font-weight: 300;
-  color: var(--color-primary-light);
 }
 
 .carousel-button {
@@ -387,28 +374,31 @@ ul {
   fill: var(--color-primary-dark);
 }
 
-.contacts-section {
+.contact-section {
   padding-bottom: 96px;
 }
-
-.contact-container {
+.contact-section__container {
   display: flex;
   gap: 32px;
 }
-
-.contact-text {
+.contact-section__text {
   margin-bottom: 42px;
   color: var(--color-brand-dark);
 }
-
-.contact-map {
+.contact-section__map {
   flex-shrink: 0;
   border: none;
   border-radius: 16px;
 }
-
-.contact-title {
+.contact-section__form-field {
+  margin-bottom: 32px;
+}
+.contact-section__title {
   margin-bottom: 16px;
+}
+.contact-section__button {
+  display: block;
+  margin: 0 auto 16px;
 }
 
 .footer {
@@ -504,6 +494,12 @@ ul {
   padding: 20px 0;
   transition: opacity 0.3s, visibility 0.3s;
 }
+.backdrop.is-hidden {
+  /* display: none; */
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
 
 .modal {
   position: relative;
@@ -516,7 +512,18 @@ ul {
   border-radius: 32px;
   overflow-y: auto;
 }
-
+.modal__title {
+  font-size: 64px;
+  text-align: center;
+  margin-bottom: 8px;
+}
+.modal__text {
+  font-style: 18px;
+  font-weight: 400;
+  color: var(--color-brand-dark);
+  margin-bottom: 72px;
+  text-align: center;
+}
 .modal::after {
   bottom: 0;
   position: absolute;
@@ -526,15 +533,7 @@ ul {
   right: 0;
   background-image: url(/images/decor-bread-modal.png);
 }
-
-.backdrop.is-hidden {
-  /* display: none; */
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-.modal-btn-close {
+.modal__btn-close {
   position: absolute;
   top: 40px;
   left: 810px;
@@ -543,18 +542,22 @@ ul {
   cursor: pointer;
   display: inline-block;
 }
-
-.modal-arrow {
+.modal__arrow {
   fill: var(--color-primary-dark);
 }
-
-.form-field {
+.modal__form-field {
   margin-bottom: 32px;
-  position: relative;
+}
+.modal__button {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 24px;
 }
 
-.form-label {
-  /* display: block; */
+.input {
+  position: relative;
+}
+.input__label {
   position: absolute;
   top: 16px;
   left: 42px;
@@ -562,18 +565,9 @@ ul {
   line-height: 1.17;
   color: var(--color-secondary-dark);
   transition: transform 0.3s;
+  pointer-events: none; /* Щоб клік проходив крізь текст лейбла в інпут */
 }
-
-.form-input:not(:-moz-placeholder) + .form-label {
-  transform: translate(-36px, -40px);
-}
-
-.form-input:focus + .form-label,
-.form-input:not(:placeholder-shown) + .form-label {
-  transform: translate(-36px, -40px);
-}
-
-.form-input {
+.input__control {
   padding: 16px 42px;
   width: 100%;
   font-size: 16px;
@@ -581,62 +575,15 @@ ul {
   border: 1px solid var(--color-secondary-dark);
   border-radius: 8px;
   background-color: transparent;
-}
-
-.form-input:focus {
-  border-color: var(--color-brand-light);
   outline: none;
+  /* Логіка підняття лейбла при фокусі або наявності тексту */
 }
-
-.form-input::-moz-placeholder {
-  color: var(--color-secondary-dark);
-  font-size: 16px;
-  line-height: 1.17;
+.input__control:focus {
+  border-color: var(--color-brand-light);
 }
-
-.form-input::placeholder {
-  color: var(--color-secondary-dark);
-  font-size: 16px;
-  line-height: 1.17;
+.input__control:not(:-moz-placeholder) + .input__label {
+  transform: translate(-36px, -40px) scale(0.8);
 }
-
-.form-input:focus::-moz-placeholder {
-  color: var(--color-primary-dark);
-}
-
-.form-input:focus::placeholder {
-  color: var(--color-primary-dark);
-}
-
-.form-button {
-  display: block;
-  margin: 0 auto 24px;
-}
-
-.form-terms {
-  margin: 0 auto;
-  max-width: 220px;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.5;
-  text-align: center;
-}
-
-.form-terms-link {
-  color: var(--color-primary-dark);
-  text-underline-offset: 2px;
-}
-
-.modal-title {
-  font-size: 64px;
-  text-align: center;
-  margin-bottom: 8px;
-}
-
-.modal-text {
-  font-style: 18px;
-  font-weight: 400;
-  color: var(--color-brand-dark);
-  margin-bottom: 72px;
-  text-align: center;
+.input__control:focus + .input__label, .input__control:not(:placeholder-shown) + .input__label {
+  transform: translate(-36px, -40px) scale(0.8);
 }/*# sourceMappingURL=main.css.map */
