виправив багато помилок адаптивності

--- a/SCSS/components/_chef-card.scss
+++ b/SCSS/components/_chef-card.scss
@@ -1,5 +1,7 @@
 .chef-card {
   display: flex;
+  flex-direction: column; // На мобільних фото буде НАД текстом
+  align-items: flex-start; // Запобігає розтягуванню фото
   gap: 30px;
 
   &__photo {
