--- a/SCSS/layout/_contact-section.scss
+++ b/SCSS/layout/_contact-section.scss
@@ -4,6 +4,14 @@
   &__container {
     display: flex;
     gap: 32px;
+
+    flex-direction: column; // На мобілці: форма зверху, карта знизу
+    gap: 24px;
+
+    @media screen and (min-width: 1200px) {
+      flex-direction: row; // На десктопі: стають поруч
+      align-items: stretch; // Вирівнюються за висотою
+    }
   }
 
   &__text {
@@ -12,9 +20,16 @@
   }
 
   &__map {
-    flex-shrink: 0;
-    border: none;
+    width: 100%; // На мобілці займає всю ширину контейнера
+    height: 440px; // Фіксована висота, щоб вона не була "половинчастою"
     border-radius: 16px;
+    flex-shrink: 0;
+
+    @media screen and (min-width: 1200px) {
+      width: 600px; // Повертаємо ширину на великих екранах
+      height: auto; // На десктопі підлаштується під висоту форми
+      min-height: 600px; // Робимо її солідною за розміром
+    }
   }
 
   &__form-field {
