Адаптував сайт під мобільні пристрої

--- a/SCSS/_base.scss
+++ b/SCSS/_base.scss
@@ -6,14 +6,24 @@
   padding: 0;
 }
 
+title {
+  position: relative;
+  margin: 0 auto 80px;
+}
+
 body {
   color: var(--color-primary-dark);
   background-color: var(--color-primary-light);
   font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-size: 18px;
-  font-weight: 400;
+  //font-style: normal;
+  font-size: 16px;
+  font-weight: 300;
   line-height: 1.5;
+
+  @media screen and (min-width: $bp-tablet) {
+    font-size: 18px;
+    font-weight: 400px;
+  }
 }
 
 h1,
@@ -24,6 +34,13 @@ h5,
 h6,
 p {
   margin-top: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 a {
