--- a/SCSS/layout/_formats-section.scss
+++ b/SCSS/layout/_formats-section.scss
@@ -2,21 +2,37 @@
   &__title {
     position: relative;
     margin: 0 auto 80px;
+
+    @media screen and (max-width: $bp-desktop) {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__slider {
+    display: flex;
+    align-items: center;
+    gap: 32px;
   }
 
   &__container {
-    display: flex;
-    gap: 32px;
-    align-items: center;
+    overflow: hidden;
   }
 
-  &__list {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-grow: 1;
+  &__button {
+    display: none;
+
+    @media screen and (min-width: $bp-tablet) {
+      display: flex;
+    }
   }
-  &__item {
-    flex-basis: calc((100% - 40px) / 3);
-  }
+
+  // &__list {
+  //   display: flex;
+  //   justify-content: center;
+  //   gap: 20px;
+  //   flex-grow: 1;
+  // }
+  // &__item {
+  //   flex-basis: calc((100% - 40px) / 3);
+  // }
 }
