--- a/SCSS/components/_buttons.scss
+++ b/SCSS/components/_buttons.scss
@@ -1,4 +1,5 @@
 .button {
+  display: block;
   padding: 16px 32px;
   background-color: var(--color-brand-light);
   border: 2px solid var(--color-brand-light);
