--- a/SCSS/components/_format-card.scss
+++ b/SCSS/components/_format-card.scss
@@ -12,11 +12,10 @@
     var(--color-primary-dark)
   );
   border-radius: 16px;
-  transition: transform 0.3s;
 
-  &:hover {
-    transform: scale(1.1);
-  }
+  // &:hover {
+  //   transform: scale(1.1);
+  // }
 
   &__image {
     position: absolute;
