--- a/SCSS/layout/_hero-section.scss
+++ b/SCSS/layout/_hero-section.scss
@@ -1,5 +1,5 @@
 .hero-section {
-  padding: 272px 0;
+  padding: 124px 0;
   background-image:
     linear-gradient(
       102.76deg,
@@ -11,19 +11,31 @@
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
-  /* background-attachment: fixed; */
+
+  @media screen and (min-width: $bp-desktop) {
+    padding: 272px 0;
+  }
 
   &__title {
     color: var(--color-primary-light);
     text-align: center;
-    margin-bottom: 0;
+    margin-bottom: 48px;
     font-size: 67px;
     line-height: 1;
     font-weight: 900;
 
-    @media screen and (min-width: $bp-tablet){
-    font-size: 128px;
-    line-height: 1.5;
+    @media screen and (min-width: $bp-desktop) {
+      margin-bottom: 0;
+      font-size: 128px;
+      line-height: 1.5;
+    }
+  }
+
+  &__button {
+    margin: 0 auto;
+
+    @media screen and (min-width: $bp-desktop) {
+      display: none;
     }
   }
 }
