--- a/SCSS/layout/_modal.scss
+++ b/SCSS/layout/_modal.scss
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
-  padding: 20px 0;
+  padding: 20px;
   transition:
     opacity 0.3s,
     visibility 0.3s;
@@ -27,10 +27,15 @@
   max-width: 880px;
   height: 100%;
   max-height: 880px;
-  padding: 128px;
+  padding: 48px;
   background-color: var(--color-primary-light);
   border-radius: 32px;
   overflow-y: auto;
+
+  @media screen and (min-width: $bp-tablet){
+  padding: 128px;
+
+  }
 
   &__title {
     font-size: 64px;
@@ -75,8 +80,6 @@
   }
 
   &__button {
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 24px;
+    margin: 0 auto 24px;
   }
 }
