--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -32,7 +32,7 @@
   --color-primary-light: #faf4ea;
   --color-brand-dark: #465929;
   --color-brand-light: #819b57;
-  --color-secondary-dark: #a18268;
+  --color-secondary-dark: #a28268;
   --color-secondary-light: #cfcfbc;
 }
 
@@ -44,14 +44,24 @@
   padding: 0;
 }
 
+title {
+  position: relative;
+  margin: 0 auto 80px;
+}
+
 body {
   color: var(--color-primary-dark);
   background-color: var(--color-primary-light);
   font-family: "Poppins", sans-serif;
-  font-style: normal;
-  font-size: 18px;
-  font-weight: 400;
+  font-size: 16px;
+  font-weight: 300;
   line-height: 1.5;
+}
+@media screen and (min-width: 768px) {
+  body {
+    font-size: 18px;
+    font-weight: 400px;
+  }
 }
 
 h1,
@@ -62,6 +72,14 @@ h5,
 h6,
 p {
   margin-top: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 a {
@@ -95,24 +113,45 @@ img {
 
 .chef-card {
   display: flex;
-  flex-direction: column;
   align-items: flex-start;
-  gap: 30px;
+  gap: 16px;
+}
+@media screen and (min-width: 1280px) {
+  .chef-card {
+    gap: 30px;
+  }
 }
 .chef-card__photo {
+  width: 140px;
   border-radius: 4px 4px 4px 200px;
   box-shadow: -16px 16px 0 0 var(--color-primary-light), -16px 16px 0 2px var(--color-secondary-dark);
 }
+@media screen and (min-width: 1280px) {
+  .chef-card__photo {
+    width: 240px;
+  }
+}
 .chef-card__title {
-  font-size: 40px;
+  font-size: 24px;
   font-weight: 600;
   margin-bottom: 16px;
 }
+@media screen and (min-width: 768px) {
+  .chef-card__title {
+    font-size: 40px;
+  }
+}
 .chef-card__text p {
+  font-size: 14px;
   margin-bottom: 24px;
 }
 .chef-card__text p:last-child {
   margin-bottom: 0;
+}
+@media screen and (min-width: 768px) {
+  .chef-card__text p {
+    font-size: 18px;
+  }
 }
 
 .format-card {
@@ -124,10 +163,6 @@ img {
   padding: 24px;
   background-image: linear-gradient(180deg, rgba(49, 38, 26, 0) 55.21%, rgba(49, 38, 26, 0.71) 72.92%, var(--color-primary-dark));
   border-radius: 16px;
-  transition: transform 0.3s;
-}
-.format-card:hover {
-  transform: scale(1.1);
 }
 .format-card__image {
   position: absolute;
@@ -151,6 +186,7 @@ img {
 }
 
 .button {
+  display: block;
   padding: 16px 32px;
   background-color: var(--color-brand-light);
   border: 2px solid var(--color-brand-light);
@@ -177,12 +213,22 @@ img {
 }
 
 .section {
-  padding: 48px 0;
+  padding: 20px 0;
+}
+@media screen and (min-width: 768px) {
+  .section {
+    padding: 48px 0;
+  }
 }
 .section__title {
-  font-size: 64px;
+  font-size: 32px;
   font-weight: 900;
   line-height: 1.3;
+}
+@media screen and (min-width: 768px) {
+  .section__title {
+    font-size: 64px;
+  }
 }
 .section__title--centered {
   text-align: center;
@@ -227,12 +273,35 @@ img {
   color: inherit !important;
 }
 
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 32px;
+}
+.pagination__button {
+  width: 12px;
+  height: 12px;
+  padding: 0;
+  background-color: var(--color-secondary-dark);
+  border-radius: 50%;
+}
+.pagination__button--active {
+  background-color: var(--color-brand-light);
+}
+
 .header {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  padding-top: 32px;
+  padding-top: 16px;
+}
+@media screen and (min-width: 1280px) {
+  .header {
+    padding-top: 32px;
+  }
 }
 .header__container {
   display: flex;
@@ -278,70 +347,147 @@ img {
 }
 
 .hero-section {
-  padding: 272px 0;
+  padding: 124px 0;
   background-image: linear-gradient(102.76deg, rgba(18, 18, 17, 0.78) 2.03%, rgba(18, 18, 17, 0.6) 58.46%, rgba(18, 18, 17, 0) 90.36%), url("../images/main-background.jpg");
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
-  /* background-attachment: fixed; */
+}
+@media screen and (min-width: 1280px) {
+  .hero-section {
+    padding: 272px 0;
+  }
 }
 .hero-section__title {
   color: var(--color-primary-light);
   text-align: center;
-  margin-bottom: 0;
+  margin-bottom: 48px;
   font-size: 67px;
   line-height: 1;
   font-weight: 900;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1280px) {
   .hero-section__title {
+    margin-bottom: 0;
     font-size: 128px;
     line-height: 1.5;
   }
 }
+.hero-section__button {
+  margin: 0 auto;
+}
+@media screen and (min-width: 1280px) {
+  .hero-section__button {
+    display: none;
+  }
+}
 
 .advantages-section {
-  background-color: var(--color-brand-light);
   padding: 16px 0;
+}
+@media screen and (min-width: 768px) {
+  .advantages-section {
+    background-color: var(--color-brand-light);
+  }
 }
 .advantages-section__list {
   display: flex;
-  justify-content: space-between;
-  gap: 40px;
+  flex-direction: column;
+  gap: 16px;
+  padding: 24px 40px;
+  background-color: var(--color-secondary-light);
+  border-radius: 24px;
+}
+@media screen and (min-width: 768px) {
+  .advantages-section__list {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 40px;
+    background-color: transparent;
+    border-radius: 0;
+    padding: 0;
+  }
 }
 .advantages-section__item {
-  color: var(--color-primary-light);
-  font-size: 20px;
+  font-size: 14px;
   font-weight: 300;
+}
+@media screen and (min-width: 768px) {
+  .advantages-section__item {
+    color: var(--color-primary-light);
+    font-size: 20px;
+  }
 }
 
 .traditions-section {
-  padding-top: 96px;
+  padding-top: 40px;
   display: flex;
+}
+@media screen and (min-width: 768px) {
+  .traditions-section {
+    padding-top: 96px;
+  }
 }
 .traditions-section__container {
   display: flex;
   justify-content: space-between;
   gap: 40px;
 }
-.traditions-section__content {
-  min-width: 710px;
+@media screen and (min-width: 1280px) {
+  .traditions-section__content {
+    max-width: 710px;
+  }
 }
 .traditions-section__title {
-  margin-bottom: 42px;
-  line-height: 84px;
-  font-weight: 900;
+  margin-bottom: 24px;
+  margin-top: 24px;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 1.2;
+  max-width: 300px;
+}
+@media screen and (min-width: 768px) {
+  .traditions-section__title {
+    margin-bottom: 42px;
+    font-weight: 900;
+    font-size: 64px;
+    line-height: 1.3;
+    max-width: 600px;
+  }
 }
 .traditions-section__text {
-  padding-top: 42px;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.5;
+  max-width: 600px;
+}
+.traditions-section__text:not(:last-child) {
+  margin-bottom: 16px;
+}
+@media screen and (min-width: 768px) {
+  .traditions-section__text {
+    font-weight: 400;
+    font-size: 18px;
+  }
+  .traditions-section__text:not(:last-child) {
+    margin-bottom: 42px;
+  }
 }
 .traditions-section__text--limited {
   max-width: 340px;
 }
 .traditions-section__photo {
   border-radius: 400px 400px 4px 4px;
+  display: block;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1280px) {
+  .traditions-section__photo {
+    width: 300px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+@media screen and (max-width: 768px) {
   .traditions-section__photo {
     display: none;
   }
@@ -349,14 +495,25 @@ img {
 
 .chefs-section__title {
   position: relative;
-  margin: 0 auto 80px;
+  margin: 0 auto 24px;
+}
+@media screen and (min-width: 1280px) {
+  .chefs-section__title {
+    margin-bottom: 80px;
+  }
 }
 .chefs-section__title::before, .chefs-section__title::after {
+  display: none;
   position: absolute;
   bottom: 24px;
   width: 352px;
   border: 2px solid var(--color-secondary-light);
   content: "";
+}
+@media screen and (min-width: 1280px) {
+  .chefs-section__title::before, .chefs-section__title::after {
+    display: block;
+  }
 }
 .chefs-section__title::before {
   left: 0;
@@ -366,30 +523,46 @@ img {
 }
 .chefs-section__list {
   display: flex;
-  gap: 40px 30px;
+  flex-direction: column;
   flex-wrap: wrap;
+  gap: 20px;
 }
-.chefs-section__item {
-  flex-basis: calc((100% - 30px) / 2);
+@media screen and (min-width: 768px) {
+  .chefs-section__list {
+    flex-direction: row;
+    gap: 40px 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .chefs-section__item {
+    flex-basis: calc((100% - 30px) / 2);
+  }
 }
 
 .formats-section__title {
   position: relative;
   margin: 0 auto 80px;
 }
-.formats-section__container {
+@media screen and (max-width: 1280px) {
+  .formats-section__title {
+    margin-bottom: 20px;
+  }
+}
+.formats-section__slider {
   display: flex;
-  gap: 32px;
   align-items: center;
+  gap: 32px;
 }
-.formats-section__list {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  flex-grow: 1;
+.formats-section__container {
+  overflow: hidden;
 }
-.formats-section__item {
-  flex-basis: calc((100% - 40px) / 3);
+.formats-section__button {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .formats-section__button {
+    display: flex;
+  }
 }
 
 .carousel-button {
@@ -399,14 +572,18 @@ img {
   flex-shrink: 0;
   width: 44px;
   height: 44px;
-  pad: 0px;
+  padding: 0x;
   border-radius: 50%;
   background-color: transparent;
   border: 1px solid var(--color-primary-dark);
   cursor: pointer;
 }
-
-.carousel-button:last-child {
+@media screen and (max-width: 768px) {
+  .carousel-button {
+    display: none;
+  }
+}
+.carousel-button.next {
   transform: rotate(180deg);
 }
 
@@ -431,7 +608,7 @@ img {
   flex-direction: column;
   gap: 24px;
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .contact-section__container {
     flex-direction: row;
     align-items: stretch;
@@ -443,11 +620,11 @@ img {
 }
 .contact-section__map {
   width: 100%;
-  height: 440px;
+  height: 276px;
   border-radius: 16px;
   flex-shrink: 0;
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .contact-section__map {
     width: 600px;
     height: auto;
@@ -474,73 +651,72 @@ img {
   background-size: cover;
   background-position: center;
 }
-
-.footer::before,
-.footer::after {
+.footer::before, .footer::after {
   background-repeat: no-repeat;
   bottom: 0;
   position: absolute;
   content: "";
 }
-
 .footer::before {
   width: 180px;
   height: 120px;
   left: 0;
   background-image: url(/images/decor-bread-small.png);
 }
-
 .footer::after {
   width: 380px;
   height: 190px;
   right: 0;
   background-image: url(/images/decor-bread-large.png);
+  pointer-events: none;
 }
-
-.footer-container {
+.footer__container {
   display: flex;
+  flex-direction: column;
+  gap: 20px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .footer__container {
+    flex-direction: row;
+    flex-basis: 50%;
+  }
+}
+.footer__nav, .footer__address {
+  display: flex;
+  flex-direction: column;
   gap: 20px;
 }
-
-.footer-nav,
-.footer-address {
-  flex-basis: 50%;
-  display: flex;
-  gap: 20px;
+@media screen and (min-width: 768px) {
+  .footer__nav, .footer__address {
+    flex-direction: row;
+    flex-basis: 50%;
+  }
 }
-
-.footer-logo,
-.footer-menu {
+.footer__logo, .footer__menu {
   flex-grow: 1;
 }
-
-.address-list,
-.address-info {
+.footer__address-list, .footer__address-info {
   flex-grow: 1;
 }
-
-.address-link {
+.footer__address-link {
   font-size: 16px;
   font-weight: 300;
   color: var(--color-primary-light);
   text-decoration: none;
 }
-
-.address-link:hover {
+.footer__address-link:hover {
   font-size: 16px;
   font-weight: 300;
   color: var(--color-brand-light);
 }
-
-.address-icon {
+.footer__address-icon {
   fill: var(--color-primary-light);
 }
-
-.address-icon:hover {
+.footer__address-icon:hover {
   fill: var(--color-brand-light);
 }
-
-.address-copyright {
+.footer__address-copyright {
   font-size: 14px;
   color: var(--color-secondary-dark);
 }
@@ -555,7 +731,7 @@ img {
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
-  padding: 20px 0;
+  padding: 20px;
   transition: opacity 0.3s, visibility 0.3s;
 }
 .backdrop.is-hidden {
@@ -570,10 +746,15 @@ img {
   max-width: 880px;
   height: 100%;
   max-height: 880px;
-  padding: 128px;
+  padding: 48px;
   background-color: var(--color-primary-light);
   border-radius: 32px;
   overflow-y: auto;
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    padding: 128px;
+  }
 }
 .modal__title {
   font-size: 64px;
@@ -612,9 +793,26 @@ img {
   margin-bottom: 32px;
 }
 .modal__button {
-  display: block;
-  margin: 0 auto;
-  margin-bottom: 24px;
+  margin: 0 auto 24px;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-primary-light);
+  transform: translateX(100%);
+  transition: transform 0.3s;
+}
+.mobile-menu.is-open {
+  transform: translateX(0);
+}
+.mobile-menu__btn-close {
+  position: absolute;
+  top: 16px;
+  right: 24px;
 }
 
 .input {
