--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -11,6 +11,7 @@
 @import './utils/texts';
 @import './layout/container';
 @import './layout/form-terms';
+@import './components/pagination';
 
 @import './layout/header';
 @import './layout/hero-section';
@@ -22,4 +23,5 @@
 @import './layout/contact-section';
 @import './layout/footer';
 @import './layout/modal';
+@import './layout/mobile-menu';
 @import './components/input';
