--- a/SCSS/layout/_traditions-section.scss
+++ b/SCSS/layout/_traditions-section.scss
@@ -71,7 +71,9 @@
   // Планшетна версія
   @media screen and (max-width: $bp-desktop) {
     width: 300px; // Або будь-яке значення, яке виглядає добре
+    height: 400px;
     object-fit: cover; // Щоб картинка всередині нових розмірів не деформувалася
+    margin-top: 64px;
   }
 
   // Мобільна версія (якщо на телефонах воно все ж не потрібне)
