--- a/SCSS/layout/_contact-section.scss
+++ b/SCSS/layout/_contact-section.scss
@@ -1,5 +1,9 @@
 .contact-section {
-  padding-bottom: 96px;
+  padding-bottom: 20px;
+
+  @media screen and (min-width: $bp-desktop) {
+    padding-bottom: 96px;
+  }
 
   &__container {
     display: flex;
