--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -125,6 +125,7 @@ img {
   width: 140px;
   border-radius: 4px 4px 4px 200px;
   box-shadow: -16px 16px 0 0 var(--color-primary-light), -16px 16px 0 2px var(--color-secondary-dark);
+  margin-left: 20px;
 }
 @media screen and (min-width: 1280px) {
   .chef-card__photo {
@@ -483,8 +484,10 @@ img {
 @media screen and (max-width: 1280px) {
   .traditions-section__photo {
     width: 300px;
+    height: 400px;
     -o-object-fit: cover;
        object-fit: cover;
+    margin-top: 64px;
   }
 }
 @media screen and (max-width: 768px) {
@@ -600,7 +603,12 @@ img {
 }
 
 .contact-section {
-  padding-bottom: 96px;
+  padding-bottom: 20px;
+}
+@media screen and (min-width: 1280px) {
+  .contact-section {
+    padding-bottom: 96px;
+  }
 }
 .contact-section__container {
   display: flex;
@@ -664,11 +672,16 @@ img {
   background-image: url(/images/decor-bread-small.png);
 }
 .footer::after {
-  width: 380px;
-  height: 190px;
+  width: 310px;
+  height: 185px;
   right: 0;
   background-image: url(/images/decor-bread-large.png);
   pointer-events: none;
+}
+@media screen and (max-width: 768px) {
+  .footer::after {
+    width: 240px;
+  }
 }
 .footer__container {
   display: flex;
@@ -693,10 +706,13 @@ img {
     flex-basis: 50%;
   }
 }
-.footer__logo, .footer__menu {
-  flex-grow: 1;
-}
-.footer__address-list, .footer__address-info {
+.footer__logo, .footer__menu, .footer__address-list, .footer__address-info {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
   flex-grow: 1;
 }
 .footer__address-link {
@@ -797,22 +813,77 @@ img {
 }
 
 .mobile-menu {
+  z-index: 1000;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: var(--color-primary-light);
+  padding: 40px 24px;
   transform: translateX(100%);
   transition: transform 0.3s;
+  display: flex;
+  flex-direction: column;
 }
 .mobile-menu.is-open {
   transform: translateX(0);
 }
+.mobile-menu__logo {
+  display: inline-block;
+  color: var(--color-primary-dark);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1;
+  text-decoration: none;
+  margin-bottom: 40px;
+}
+.mobile-menu__logo span {
+  font-size: 18px;
+  font-weight: 700;
+}
+.mobile-menu__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.mobile-menu__link {
+  display: block;
+  color: var(--color-primary-dark);
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 400;
+  margin-bottom: 24px;
+  transition: color 0.3s;
+}
+.mobile-menu__link:hover, .mobile-menu__link:focus {
+  color: var(--color-brand-light);
+}
 .mobile-menu__btn-close {
   position: absolute;
-  top: 16px;
-  right: 24px;
+  top: 40px;
+  right: 20px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  line-height: 0;
+}
+.mobile-menu::after {
+  bottom: 0;
+  position: absolute;
+  content: "";
+  width: 180px;
+  height: 240px;
+  right: 0;
+  background-image: url(/images/decor-bread-modal.png);
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  background-size: contain;
+  pointer-events: none;
+}
+
+body.is-scroll-disabled {
+  overflow: hidden;
 }
 
 .input {
